--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sistemaventasnube",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+    "test": "echo \"No tests specified\" && exit 0"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
